# Marseyloader

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  Directory.Packages.props  LICENSE  LICENSE.txt  Launcher.props  MarseyLoader.sln  Readme.md  SS14.Launcher.sln  SS14.Launcher.sln.DotSettings  download_net_runtime.py  flake.nix  global.json  nuget.config  publish.sh  publish_linux.sh  publish_osx.sh  publish_windows.sh
Marsey/: Exceptions.cs  FileHandler.cs  GameAssemblyManager.cs  Marsey.csproj  MarseyPatch.cs  MarseyPatcher.cs  MarseyVars.cs  PatchAssemblyManager.cs  README.md  Utility.cs
Marsey.IPC/: Client.cs  Server.cs
Marsey.Tests/: Marsey.Tests.csproj
PublishFiles/: SS14.Launcher  SS14.desktop  launch.bat
SS14.Launcher/: App.xaml  App.xaml.cs  AssemblyInfo.cs  AuthApi.cs  AvaloniaSeriLogger.cs  ConfigConstants.cs  Global.cs  HappyEyeballsHttp.cs  Helpers.cs  HttpSelfTest.cs  IconsLoader.cs  JenkinsData.cs  Launcher.cs  LauncherCommands.cs  LauncherDiagnostics.cs  LauncherMessaging.cs  LauncherPaths.cs  LauncherVersion.cs  Program.cs  SS14.Launcher.csproj  Theme.xaml  ThemeResources.xaml  UriHelper.cs  UrlConstants.cs  UserDataDir.cs  UsernameHelpers.cs  VcRedistCheck.cs  ViewLocator.cs  nuget.config  signing_key
SS14.Launcher.Bootstrap/: Program.cs  SS14.Launcher.Bootstrap.csproj  console.bat
SS14.Launcher.FakeRobustToolbox/: README.md  SS14.Launcher.FakeRobustToolbox.sln
SS14.Launcher.Strap/: Program.cs  SS14.Launcher.Strap.csproj
SS14.Launcher.Tests/: RidUtilityTest.cs  SS14.Launcher.Tests.csproj  UriHelperTests.cs
(+347 files in other folders)
